# intesa-san-paolo-statement-parser

./: .gitignore  README.md  pyproject.toml
examples/: example.tags.txt
isparser/: __init__.py  __main__.py  isparser.py  statement_parser.py
isparser/models/: custom_base_model.py  movement.py
isparser/shared/exceptions/: movement_pages_not_found.py
isparser/shared/utils/: logger.py
